--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "core-js": "^3.4.3",
     "countup.js": "^2.0.4",
     "dayjs": "^1.8.17",
+    "echarts": "^5.2.1",
     "element-ui": "^2.15.6",
     "faker": "^4.1.0",
     "flex.css": "^1.1.7",
